--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "@heroicons/react": "^2.0.18",
-    "date-fns": "^2.30.0"
+    "date-fns": "^2.30.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
